Replace the color value with clearer one
$muted-fg-color can be removed anytime too (see comments by the upstream on each theme variables CSS file).

Signed-off-by: Suguru Hirahara <luixxiul@users.noreply.github.com>

--- a/res/css/_sc/feature-improvement/consistency__TextEvent/views/messages/_DecryptionFailureBody.pcss
+++ b/res/css/_sc/feature-improvement/consistency__TextEvent/views/messages/_DecryptionFailureBody.pcss
@@ -16,7 +16,7 @@ limitations under the License.
 
 @define-mixin DecryptionFailureBody {
     .mx_DecryptionFailureBody {
-        color: $muted-fg-color;
+        color: $tertiary-content;
         font: var(--cpd-font-body-sm-regular);
     }
 }
