--- a/res/css/_sc/feature-improvement/consistency__TextEvent/views/messages/_TextualEvent.pcss
+++ b/res/css/_sc/feature-improvement/consistency__TextEvent/views/messages/_TextualEvent.pcss
@@ -17,7 +17,7 @@ limitations under the License.
 @define-mixin TextualEvent {
     .mx_TextualEvent {
         opacity: unset; /* Unset as it is very confusing to use opacity value to set text color */
-        color: $muted-fg-color;
+        color: $tertiary-content;
         font: var(--cpd-font-body-sm-regular);
     }
 }
