Create EventTile_font mixin and remove redundant files
Signed-off-by: Suguru Hirahara <luixxiul@users.noreply.github.com>

--- a/res/css/_sc/feature-improvement/consistency__TextEvent/index.pcss
+++ b/res/css/_sc/feature-improvement/consistency__TextEvent/index.pcss
@@ -19,12 +19,9 @@ limitations under the License.
 
 @import "./views/rooms/_EventTile.pcss";
 @import "./views/messages/_DecryptionFailureBody.pcss";
-@import "./views/messages/_TextualEvent.pcss";
-@import "./views/messages/_RedactedBody.pcss";
 
 @define-mixin consistency__TextEvent {
     @mixin EventTile_color;
+    @mixin EventTile_font;
     @mixin DecryptionFailureBody;
-    @mixin TextualEvent;
-    @mixin RedactedBody;
 }
