--- a/res/css/_sc/feature-improvement/consistency__TextEvent/views/messages/_DecryptionFailureBody.pcss
+++ b/res/css/_sc/feature-improvement/consistency__TextEvent/views/messages/_DecryptionFailureBody.pcss
@@ -14,6 +14,8 @@ See the License for the specific language governing permissions and
 limitations under the License.
 */
 
+/* Since mx_DecryptionFailureBody is neither in mx_EventTile_info nor
+   mx_GenericEventListSummary, it requires rules which style it directly.  */
 @define-mixin DecryptionFailureBody {
     .mx_DecryptionFailureBody {
         color: $tertiary-content;
