--- a/res/css/_sc/feature-improvement/consistency__TextEvent/index.pcss
+++ b/res/css/_sc/feature-improvement/consistency__TextEvent/index.pcss
@@ -23,5 +23,6 @@ limitations under the License.
 @define-mixin consistency__TextEvent {
     @mixin EventTile_line_color;
     @mixin EventTile_line_font;
+    @mixin EventTile_line_M;
     @mixin DecryptionFailureBody;
 }
