Add _DisambiguatedProfile.pcss, applied to RightPanel as well
Signed-off-by: Suguru Hirahara <luixxiul@users.noreply.github.com>

--- a/res/css/_sc/_customization.pcss
+++ b/res/css/_sc/_customization.pcss
@@ -14,5 +14,6 @@ See the License for the specific language governing permissions and
 limitations under the License.
 */
 
-/* TODO: replace @import with @mixin once multiple CSS files are created for customization in order to keep styling modular */
-@import "./views/rooms/_IRCLayout.pcss";
+@import "./feature-improvement/consistency__TextEvent/index.pcss";
+
+@mixin consistency__TextEvent;
