Stop the search bar wobble

--- a/res/css/_common.pcss
+++ b/res/css/_common.pcss
@@ -181,6 +181,7 @@ input[type="search"].mx_textinput_icon {
     padding-left: 36px;
     background-repeat: no-repeat;
     background-position: 10px center;
+    min-height: 33px;
 }
 
 /* FIXME THEME - Tint by CSS rather than referencing a duplicate asset */
